@startuml

title __BEAN's Class Diagram__\n

  namespace com.aaron.justlike {
    namespace common {
      namespace bean {
        class com.aaron.justlike.common.bean.Album {
            - mCollectionTitle : String
            - mCreateAt : long
            - mElementTotal : String
            - mImagePath : String
            + equals()
            + getCollectionTitle()
            + getCreateAt()
            + getElementTotal()
            + getImagePath()
            + hashCode()
            + setCollectionTitle()
            + setCreateAt()
            + setElementTotal()
            + setImagePath()
        }
      }
    }
  }
  

  namespace com.aaron.justlike {
    namespace common {
      namespace bean {
        class com.aaron.justlike.common.bean.Collection {
            - createAt : long
            - id : int
            - path : String
            - title : String
            - total : int
            + getCreateAt()
            + getId()
            + getPath()
            + getTitle()
            + getTotal()
            + setCreateAt()
            + setId()
            + setPath()
            + setTitle()
            + setTotal()
        }
      }
    }
  }
  

  namespace com.aaron.justlike {
    namespace common {
      namespace bean {
        class com.aaron.justlike.common.bean.Element {
            - createAt : long
            - id : int
            - path : String
            - title : String
            + getCreateAt()
            + getId()
            + getPath()
            + getTitle()
            + setCreateAt()
            + setId()
            + setPath()
            + setTitle()
        }
      }
    }
  }
  

  namespace com.aaron.justlike {
    namespace common {
      namespace bean {
        class com.aaron.justlike.common.bean.Image {
            {static} + CREATOR : Creator<Image>
            - date : String
            - eventFlag : int
            - name : String
            - path : String
            - size : long
            + Image()
            + Image()
            + describeContents()
            + equals()
            + getDate()
            + getEventFlag()
            + getName()
            + getPath()
            + getSize()
            + hashCode()
            + setDate()
            + setEventFlag()
            + setName()
            + setPath()
            + setSize()
            + writeToParcel()
            # Image()
        }
      }
    }
  }
  

  namespace com.aaron.justlike {
    namespace common {
      namespace bean {
        class com.aaron.justlike.common.bean.ImageInfo {
            - name : String
            - path : String
            - pixel : String
            - size : String
            - time : String
            + ImageInfo()
            + getName()
            + getPath()
            + getPixel()
            + getSize()
            + getTime()
            + setName()
            + setPath()
            + setPixel()
            + setSize()
            + setTime()
        }
      }
    }
  }
  

  namespace com.aaron.justlike {
    namespace common {
      namespace bean {
        class com.aaron.justlike.common.bean.Library {
            - author : String
            - introduce : String
            - name : String
            + Library()
            + getAuthor()
            + getIntroduce()
            + getName()
            + setAuthor()
            + setIntroduce()
            + setName()
        }
      }
    }
  }
  

  namespace com.aaron.justlike {
    namespace common {
      namespace bean {
        class com.aaron.justlike.common.bean.Message {
            - iconId : int
            - title : String
            + Message()
            + getIconId()
            + getTitle()
            + setIconId()
            + setTitle()
        }
      }
    }
  }
  

  namespace com.aaron.justlike {
    namespace common {
      namespace bean {
        class com.aaron.justlike.common.bean.SortInfo {
            - ascendingOrder : String
            - sortType : String
            + getAscendingOrder()
            + getSortType()
            + setAscendingOrder()
            + setSortType()
        }
      }
    }
  }
  

  com.aaron.justlike.common.bean.Collection -up-|> org.litepal.crud.LitePalSupport
  com.aaron.justlike.common.bean.Element -up-|> org.litepal.crud.LitePalSupport
  com.aaron.justlike.common.bean.Image .up.|> android.os.Parcelable
  com.aaron.justlike.common.bean.SortInfo -up-|> org.litepal.crud.LitePalSupport


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
